<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicaActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="78dp"
        android:text="@string/a_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="89dp"
        android:text="@string/b_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_AB"
        app:layout_constraintStart_toEndOf="@+id/tv_A"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tv_AB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="72dp"
        android:text="@string/ab_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCaseOneA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/true_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_A" />

    <TextView
        android:id="@+id/tvCaseOneB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="48dp"
        android:text="@string/true_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/tvCaseOneA"
        app:layout_constraintTop_toBottomOf="@+id/tv_B" />

    <EditText
        android:id="@+id/etAnswerCaseOne"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/answer_description"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_AB"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvCaseTwoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/true_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseOneA" />

    <TextView
        android:id="@+id/tvCaseTwoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="64dp"
        android:text="@string/false_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/tvCaseTwoA"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseOneB" />

    <EditText
        android:id="@+id/etAnswerCaseTwo"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/answer_description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswerCaseOne" />

    <TextView
        android:id="@+id/tvCaseThreeA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/false_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseTwoA" />

    <TextView
        android:id="@+id/tvCaseThreeB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="64dp"
        android:text="@string/true_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/tvCaseThreeA"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseTwoB" />

    <EditText
        android:id="@+id/etAnswerCaseThree"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/answer_description"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswerCaseTwo"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/tvCaseFourA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="@string/false_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseThreeA" />

    <TextView
        android:id="@+id/tvCaseFourB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="64dp"
        android:text="@string/false_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/tvCaseFourA"
        app:layout_constraintTop_toBottomOf="@+id/tvCaseThreeB" />

    <EditText
        android:id="@+id/etAnswerCaseFour"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/answer_description"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswerCaseThree"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>